--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Gallery — Keval Kotadia Photography</title>
+  <title>Keval Kotadia — Gallery</title>
+  <meta name="description" content="Gallery of nature photos by Keval Kotadia" />
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   <style>
     :root{
       --bg:#0f0f10; --card:#0f1720; --muted:#a7b0b8; --accent:#f59e0b; --white:#ffffff;
@@ -11,26 +13,44 @@
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
     }
     *{box-sizing:border-box}
-    body{margin:0; background:linear-gradient(180deg,#071021 0%, #081428 100%); color:var(--white); -webkit-font-smoothing:antialiased}
+    body{margin:0;background:linear-gradient(180deg,#071021 0%, #081428 100%); color:var(--white); -webkit-font-smoothing:antialiased}
     .container{max-width:var(--max-width); margin:0 auto; padding:28px}
-    header{display:flex; align-items:center; justify-content:space-between; gap:16px}
-    .brand{display:flex; align-items:center; gap:12px}
-    .logo{width:48px; height:48px; border-radius:10px; background:linear-gradient(135deg,#111827,#0ea5a9); display:flex; align-items:center; justify-content:center; font-weight:700}
-    .brand h1{font-size:18px; margin:0}
-    .brand p{margin:0; font-size:13px; color:var(--muted)}
-    nav a{color:var(--white); text-decoration:none; margin-left:16px; font-size:14px}
-    nav a:hover{text-decoration:underline;}
-    .gallery{display:grid; grid-template-columns:repeat(auto-fill,minmax(220px,1fr)); gap:16px; margin:20px 0}
-    .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01)); border-radius:12px; overflow:hidden; position:relative}
-    .card img{width:100%; height:260px; object-fit:cover; display:block; cursor:pointer}
+    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
+    .brand{display:flex;align-items:center;gap:12px}
+    .logo{width:48px;height:48px;border-radius:10px;background:linear-gradient(135deg,#111827,#0ea5a9);display:flex;align-items:center;justify-content:center;font-weight:700}
+    .brand h1{font-size:18px;margin:0}
+    nav a{color:var(--white);text-decoration:none;margin-left:16px;font-size:14px}
+    .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:16px;margin:20px 0}
+    .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:12px;overflow:hidden;position:relative;cursor:pointer;}
+    .card img{width:100%;height:260px;object-fit:cover;display:block;border-radius:12px}
     .card .meta{padding:12px}
-    .card .meta h3{margin:0 0 6px; font-size:16px}
-    .card .meta p{margin:0; color:var(--muted); font-size:13px}
-    .lightbox{position:fixed; inset:0; display:none; align-items:center; justify-content:center; background:rgba(0,0,0,0.8); z-index:1200}
+    .card .meta h3{margin:0 0 6px;font-size:16px}
+    .card .meta p{margin:0;color:var(--muted);font-size:13px}
+    .lightbox{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.8);z-index:1200}
     .lightbox.open{display:flex}
-    .lightbox img{max-width:95%; max-height:85%; border-radius:8px; box-shadow:0 20px 40px rgba(0,0,0,0.6)}
-    .lb-close{position:absolute; top:28px; right:28px; background:rgba(0,0,0,0.4); border-radius:8px; padding:8px 10px; cursor:pointer}
-    footer{margin:48px 0 16px; color:var(--muted); font-size:13px; text-align:center}
+    .lightbox img{max-width:95%;max-height:85%;border-radius:8px;box-shadow:0 20px 40px rgba(0,0,0,0.6);touch-action:none;}
+    .lb-close{position:absolute;top:28px;right:28px;background:rgba(0,0,0,0.4);border-radius:8px;padding:8px 10px;cursor:pointer;user-select:none;}
+    .lb-download {
+      position: absolute;
+      top: 28px;
+      left: 28px;
+      cursor: pointer;
+      padding: 8px 10px;
+      background: rgba(0,0,0,0.4);
+      border-radius: 8px;
+      color: #fff;
+      font-size: 16px;
+      user-select: none;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1300;
+    }
+    .lb-download:hover {
+      background: rgba(0,0,0,0.7);
+    }
+    footer{margin:48px 0 16px;color:var(--muted);font-size:13px;text-align:center}
   </style>
 </head>
 <body>
@@ -40,7 +60,6 @@
         <div class="logo">KK</div>
         <div>
           <h1>Keval Kotadia</h1>
-          <p>Nature & Landscape Photographer</p>
         </div>
       </div>
       <nav>
@@ -50,34 +69,120 @@
       </nav>
     </header>
 
-    <main>
-      <section>
-        <h2>Gallery</h2>
-        <div id="galleryGrid" class="gallery" aria-live="polite"></div>
-      </section>
-    </main>
+    <section id="gallery">
+      <h2 style="margin-top:6px">Gallery</h2>
+      <div id="galleryGrid" class="gallery" aria-live="polite"></div>
+    </section>
 
-    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true">
-      <div class="lb-close" id="lbClose">✕</div>
+    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true" tabindex="-1">
+      <div class="lb-close" id="lbClose" role="button" aria-label="Close lightbox">✕</div>
+      <a id="lbDownload" class="lb-download" download href="#" title="Download Photo" aria-label="Download photo">⬇</a>
       <img id="lbImage" src="" alt="Enlarged photo" />
     </div>
 
     <footer>
-      © <span id="year"></span> Keval Kotadia — <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" style="color:var(--muted); text-decoration:underline;">Instagram</a>
+      © <span id="year"></span> Keval Kotadia
     </footer>
   </div>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    async function loadGallery(){
+    const lb = document.getElementById('lightbox');
+    const lbImg = document.getElementById('lbImage');
+    const lbClose = document.getElementById('lbClose');
+    const lbDownload = document.getElementById('lbDownload');
+
+    let currentIndex = 0;
+    let galleryData = [];
+
+    function openLightbox(item, index) {
+      lbImg.src = item.src;
+      lbImg.alt = item.alt || item.title || '';
+      lb.classList.add('open');
+      currentIndex = index;
+      updateDownloadLink();
+      lb.focus();
+    }
+
+    function updateDownloadLink() {
+      lbDownload.href = lbImg.src;
+      lbDownload.setAttribute('download', lbImg.alt || 'photo');
+    }
+
+    lbClose.addEventListener('click', () => {
+      lb.classList.remove('open');
+      lbImg.src = '';
+    });
+
+    lb.addEventListener('click', (e) => {
+      if (e.target === lb) {
+        lb.classList.remove('open');
+        lbImg.src = '';
+      }
+    });
+
+    // Keyboard navigation
+    document.addEventListener('keydown', (e) => {
+      if (!lb.classList.contains('open')) return;
+      if (e.key === 'Escape') {
+        lb.classList.remove('open');
+        lbImg.src = '';
+      } else if (e.key === 'ArrowRight') {
+        showNextPhoto();
+      } else if (e.key === 'ArrowLeft') {
+        showPrevPhoto();
+      }
+    });
+
+    function showNextPhoto() {
+      currentIndex = (currentIndex + 1) % galleryData.length;
+      const item = galleryData[currentIndex];
+      lbImg.src = item.src;
+      lbImg.alt = item.alt || item.title || '';
+      updateDownloadLink();
+    }
+
+    function showPrevPhoto() {
+      currentIndex = (currentIndex - 1 + galleryData.length) % galleryData.length;
+      const item = galleryData[currentIndex];
+      lbImg.src = item.src;
+      lbImg.alt = item.alt || item.title || '';
+      updateDownloadLink();
+    }
+
+    // Swipe support for touch devices
+    let touchStartX = 0;
+    let touchEndX = 0;
+
+    lbImg.addEventListener('touchstart', (e) => {
+      touchStartX = e.changedTouches[0].screenX;
+    });
+
+    lbImg.addEventListener('touchend', (e) => {
+      touchEndX = e.changedTouches[0].screenX;
+      handleGesture();
+    });
+
+    function handleGesture() {
+      if (touchEndX < touchStartX - 40) { // swipe left
+        showNextPhoto();
+      }
+      if (touchEndX > touchStartX + 40) { // swipe right
+        showPrevPhoto();
+      }
+    }
+
+    async function loadGallery() {
       try {
         const res = await fetch('gallery.json', {cache: 'no-cache'});
-        if(!res.ok) throw new Error('gallery.json not found');
-        const data = await res.json();
-        console.log('Gallery data loaded:', data);
+        if (!res.ok) throw new Error('gallery.json not found');
+        galleryData = await res.json();
+
         const grid = document.getElementById('galleryGrid');
-        data.forEach(item => {
+        grid.innerHTML = '';
+
+        galleryData.forEach((item, index) => {
           const card = document.createElement('article');
           card.className = 'card';
 
@@ -86,7 +191,7 @@
           img.decoding = 'async';
           img.alt = item.alt || item.title || 'Photo by Keval Kotadia';
           img.src = item.src;
-          img.addEventListener('click', () => openLightbox(item));
+          img.addEventListener('click', () => openLightbox(item, index));
 
           const meta = document.createElement('div');
           meta.className = 'meta';
@@ -109,31 +214,6 @@
         document.getElementById('galleryGrid').innerHTML = '<p style="color:var(--muted)">Gallery not available.</p>';
       }
     }
-
-    const lb = document.getElementById('lightbox');
-    const lbImg = document.getElementById('lbImage');
-
-    function openLightbox(item) {
-      lbImg.src = item.src;
-      lbImg.alt = item.alt || item.title || '';
-      lb.classList.add('open');
-    }
-
-    document.getElementById('lbClose').addEventListener('click', () => {
-      lb.classList.remove('open');
-      lbImg.src = '';
-    });
-
-    lb.addEventListener('click', (e) => {
-      if (e.target === lb) {
-        lb.classList.remove('open');
-        lbImg.src = '';
-      }
-    });
-
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape') lb.classList.remove('open');
-    });
 
     loadGallery();
   </script>
