--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Keval Kotadia — Nature Photography</title>
+  <link rel="icon" type="image/png" href="images/favicon.png" />
   <meta name="description" content="Explore the serene nature photography of Keval Kotadia — landscapes, wildlife & more." />
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   <style>
@@ -68,7 +69,7 @@
         <a class="cta" href="../gallery/">View Gallery</a>
       </div>
       <div class="hero-image" aria-hidden="true">
-        <img src="images/featured.webp" alt="Featured photo" style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px">
+        <img src="images/background.jpg" alt="Featured photo" style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px">
       </div>
     </section>
 
