--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <a class="cta" href="../gallery/">View Gallery</a>
       </div>
       <div class="hero-image" aria-hidden="true">
-        <img src="gallery/background.jpg" alt="Featured photo" style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px">
+        <img src="../gallery/background.jpg" alt="Featured photo" style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px">
       </div>
     </section>
 
@@ -99,7 +99,7 @@
     document.getElementById('year').textContent = new Date().getFullYear();
     async function loadGallery(){
       try{
-        const res = await fetch('gallery.json', {cache: 'no-cache'});
+        const res = await fetch('../gallery/gallery.json', {cache: 'no-cache'});
         if(!res.ok) throw new Error('gallery.json not found');
         const data = await res.json();
         const grid = document.getElementById('galleryGrid');
