--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       </div>
       <nav>
         <a href="../gallery/">Gallery</a>
+        <a href="#about">About</a>
         <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
       </nav>
     </header>
@@ -73,16 +74,6 @@
       </div>
     </section>
 
-    <section id="gallery">
-      <h2 style="margin-top:6px">Gallery</h2>
-      <div id="galleryGrid" class="gallery" aria-live="polite"></div>
-    </section>
-
-    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true">
-      <div class="lb-close" id="lbClose">✕</div>
-      <img id="lbImage" src="" alt="Enlarged photo">
-    </div>
-
     <section id="about" style="margin-top:30px">
       <h2>About</h2>
       <div style="display:grid;grid-template-columns:1fr;gap:16px;margin-top:12px">
@@ -95,46 +86,5 @@
     </footer>
   </div>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    async function loadGallery(){
-      try{
-        const res = await fetch('../gallery/gallery.json', {cache: 'no-cache'});
-        if(!res.ok) throw new Error('gallery.json not found');
-        const data = await res.json();
-        const grid = document.getElementById('galleryGrid');
-        data.forEach(item => {
-          const card = document.createElement('article');
-          card.className = 'card';
-          const img = document.createElement('img');
-          img.loading = 'lazy';
-          img.decoding = 'async';
-          img.alt = item.alt || item.title || 'Photo by Keval Kotadia';
-          img.src = item.src;
-          img.addEventListener('click', () => openLightbox(item));
-          card.appendChild(img);
-          const meta = document.createElement('div');
-          meta.className = 'meta';
-          const h3 = document.createElement('h3'); h3.textContent = item.title || '';
-          const p = document.createElement('p'); p.textContent = item.year || '';
-          meta.appendChild(h3); meta.appendChild(p);
-          card.appendChild(meta);
-          grid.appendChild(card);
-        });
-      }catch(err){
-        document.getElementById('galleryGrid').innerHTML = '<p style="color:var(--muted)">Gallery not available.</p>';
-      }
-    }
-    const lb = document.getElementById('lightbox');
-    const lbImg = document.getElementById('lbImage');
-    function openLightbox(item){
-      lbImg.src = item.src; lbImg.alt = item.alt || item.title || '';
-      lb.classList.add('open');
-    }
-    document.getElementById('lbClose').addEventListener('click', () => { lb.classList.remove('open'); lbImg.src=''; });
-    lb.addEventListener('click', (e)=>{ if(e.target===lb){ lb.classList.remove('open'); lbImg.src=''; } });
-    loadGallery();
-    document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape') lb.classList.remove('open'); });
-  </script>
 </body>
 </html>
